0.3.102
=======
- Allow all arguments in the terminal parameters (part of bug #5301).

0.3.101
=======
- Quote arguments passed to exo-open (bug #5132).
- Add gettext() call around two strings which are already as translatable with 
  N_() (bug #5203).
- Fix broken build due to incomplete integration of the Danish and Galician 
  manual translations.

0.3.100
=======
- Updated translations: ro (Mișu Moldovan), el (Stavros Giannouris), 
  es (Abel Martín), gl (Leandro Requeiro), zh_CN (Chris K. Zhang),
  pl (Piotr Sokół), en_GB (Jeff Bailes), fr (Mike Massonnet), 
  tr (Eren Türkay)

0.3.99.1
========
- Updated translations: da (Lars Chrisitan Jensen, Per Kongstad), 
  es (Abel Martín), fr (Maximilian Schleiss, Mike Massonnet), 
  id (Andhika Padmawan), pt_BR (Og Maciel, tr (Gökmen Görgen).

0.3.93
======
- Don't setup bindings for <Shift>n and <Shift>p in ExoIconView so that
  type-ahead search works as expected (bug #4633).
- Remove GenericName and "Xfce 4" prefix from 
  exo-preferred-applications.desktop.
- Stop startup notification once the plug is created and the helper 
  settings dialog content has been moved into the plug.
- Use -V instead of -v as short parameter for --version.
- Improve handling of URIs in exo-open (bug #4627).
- Updated translations: ca (Carles Muños Gorriz), cs (Michal Varady),
  de (Fabian Nowak, Jannis Pohlmann), es (Abel Martín), eu (Piarres 
  Beobide), fi (Jari Rahkonen), fr (Maximilian Schleiss), hu (Szervác 
  Attila), id (Andhika Padmawan), ja (Nobuhiro Iwamatsu), nb_NO (Terje
  Uriansrud), pt_BR (Og Maciel), sq (Besnik Bleta), sv (Daniel 
  Nylander), tr (Eren Turkay).

0.3.92
======
- Make Preferred Applications dialog pluggable into the new settings
  manager.
- Draw the background for text renderers inside the icon view. This is
  just a workaround inspired by GtkIconView and should be removed later.
- Get rid of external MD5 functions (Bug #4595).
- Fix compile against GLib < 2.14.