@@ -1,6 +1,7 @@
 0.3.102
 =======
 - Allow all arguments in the terminal parameters (part of bug #5301).
+- Fix some issues in exo-open with spaces in arguments.
 
 0.3.101
 =======
